# tap-hubspot

./: .gitignore  README.md  catalog.json  meltano.yml  pyproject.toml  renovate.json5  state.json  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci_validate_meltano_install.yml  dependabot_auto_merge.yml
tap_hubspot/: __init__.py  analytics_streams.py  auth.py  automation_stream.py  automation_streams.py  client.py  events_streams.py  marketing_streams.py  streams.py  tap.py
tap_hubspot/properties/: calls.json  companies.json  contacts.json  deals.json  emails.json  meetings.json  notes.json  tasks.json
tap_hubspot/schemas/: Owners.py  associations_deals_companies.json  associations_deals_contacts.json  calls.json  contacts.json  deal_pipelines.json  deals.json  engagements.json  list_contacts_v1.json  lists_v1.json  meetings.json  owners.json  properties.json  quotes.json  workflows.json
tap_hubspot/schemas copy/: engagements.json
tap_hubspot/schemas/analytics/: AnalyticsViews.py
tap_hubspot/schemas/automation/: Workflows.py
tap_hubspot/schemas/events/: WebAnalytics.py  WebAnalyticsContacts.py  WebAnalyticsDeals.py
tap_hubspot/schemas/marketing/: CampaignIds.py  Campaigns.py  Emails.py  Forms.py  ListContacts.py  Lists.py
tap_hubspot/schemas_copy/: engagements.json
tap_hubspot/tests/: __init__.py  test_core.py
