[tool.poetry]
name = "tap-hubspot"
version = "0.0.1"
description = "`tap-hubspot` is a Singer tap for Hubspot, built with the Meltano SDK for Singer Taps."
authors = ["Potloc"]
keywords = [
    "ELT",
    "Hubspot",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
requests = "^2.25.1"
singer-sdk = "^0.34.1"
attrs = "^23.2.0"
atomicwrites = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
tox = "^3.24.4"
flake8 = "^5.0.4"
black = "^23.3.0"
pydocstyle = "^6.1.1"
mypy = "^1.4"
types-requests = "^2.31.0"
isort = "^5.10.1"
requests-mock = "^1.12.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_hubspot"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-hubspot = 'tap_hubspot.tap:TapHubspot.cli'
